// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="background--primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <Slider
    arrows={false}
    dots={true}
    edgeFriction={0}
    infinite={false}
    speed={300}
  >
    <div>
      <img
        data-index={0}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img1.jpg"
      />
    </div>
    <div>
      <img
        data-index={1}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img2.jpg"
      />
    </div>
    <div>
      <img
        data-index={2}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img3.jpg"
      />
    </div>
    <div>
      <img
        data-index={3}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img4.jpg"
      />
    </div>
    <div>
      <img
        data-index={4}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img5.jpg"
      />
    </div>
    <div>
      <img
        data-index={5}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img6.jpg"
      />
    </div>
    <div>
      <img
        data-index={6}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img7.jpg"
      />
    </div>
    <div>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/"
      >
        <img
          role="presentation"
          src="/welcome/tablet/onboard-img8.jpg"
        />
      </Link>
    </div>
  </Slider>
  <Link
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={
      Object {
        "bottom": "5px",
        "color": "white",
        "fontSize": "15px",
        "position": "fixed",
        "right": "10px",
        "textDecoration": "none",
      }
    }
    to="/"
  >
    Skip
  </Link>
</div>
`;

exports[`test renders 1`] = `
<div
  className="background--primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
      "position": "absolute",
      "width": "100%",
    }
  }>
  <Slider
    arrows={false}
    dots={true}
    edgeFriction={0}
    infinite={false}
    speed={300}>
    <div>
      <img
        data-index={0}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img1.jpg" />
    </div>
    <div>
      <img
        data-index={1}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img2.jpg" />
    </div>
    <div>
      <img
        data-index={2}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img3.jpg" />
    </div>
    <div>
      <img
        data-index={3}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img4.jpg" />
    </div>
    <div>
      <img
        data-index={4}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img5.jpg" />
    </div>
    <div>
      <img
        data-index={5}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img6.jpg" />
    </div>
    <div>
      <img
        data-index={6}
        onClick={[Function]}
        role="presentation"
        src="/welcome/tablet/onboard-img7.jpg" />
    </div>
    <div>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/">
        <img
          role="presentation"
          src="/welcome/tablet/onboard-img8.jpg" />
      </Link>
    </div>
  </Slider>
  <Link
    onClick={[Function]}
    onlyActiveOnIndex={false}
    style={
      Object {
        "bottom": "5px",
        "color": "white",
        "fontSize": "15px",
        "position": "fixed",
        "right": "10px",
        "textDecoration": "none",
      }
    }
    to="/">
    Skip
  </Link>
</div>
`;
